cm-nginx-test-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-myapp-demo
  namespace:  default
  labels:
    app:  cm-myapp-demo
  annotations:
    create_by:  "Gulity"
spec:
  containers:
    - name: myapp-demo
      image:  ikubernetes/myapp:v1
      ports:
        - name: http
          containerPort:  80
      volumeMounts:
        - name: nginx_conf 
          mountPath:  /etc/nginx/config.d/
          readOnly: true
  volumes:
    - name: nginx_conf 
      configMap:
        name: k8s.test.com
