pod-demo.yaml
apiVersion: v1
kind: Pod
metadata:
        name: pod-demo
        namespace: default
        labels:         
           app: myapp
           tier: frontend
spec:
   containers:
   - name: myapp
     image: ikubernetes/myapp:v1
     ports:
       - name: http
         containerPort: 80
   - name: busybox
     image: busybox:lastest
     command:
           - "/bin/sh"
           - "-c"
           - "date >> /usr/share/nginx/html/index.html;sleep 5"
