pod-volume-demo.yaml
apiVersion: v1
kind: Pod
metadata:
        name: pod-volume-demo
        namespace: default
        labels:         
           app: myapp
           tier: frontend
spec:
  containers:
    - name: myapp
      image: ikubernetes/myapp:v1
      imagePullPolicy:  IfNotPresent
      ports:
        - name: http
          continerPort: 80
      volumeMounts:
        - name: html
          mountPath:  /usr/local/nginx/html
    - name: busybox
      image: busybox:lastest
      imagePullPolicy:  IfNotPresent
      volumeMounts:
        - name: html
          mountPath:  /data/
      command:  ["/bin/sh"]
      args: ["-c","while true;do echo $(date) >> /data/index.html;sleep 2; done"]
  volumes:
    - name: html
      emptyDir: {}
