postStart-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: poststart-pod
  namespace: default
spec:
  containers:
    - name: busybox-httpd
      image:  busybox:latest
      imagePullPolicy:  IfNotPresent
      liftcycle:
        postStart:
          exec:
            command: ["/bin/sh","-c","mkdir -p /data/web/html;echo 'Home page' >> /data/web/html/index.html"]
      command: ["/bin/sh","-c","sleep 3600"]
      #command:  ["/bin/httpd"]
      #args: ["-f","-h /data/web/html"]
