pvc-demo.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-myapp-pvc
  namespace:  default
spec:
  containers:
    - name: myapp
      image: ikubernetes/myapp:v1
      ports:
        - name: http
          containerPort:  80
      volumeMounts:
        - name: html
          mountPath:  /usr/share/nginx/html
  volumes:
    - name: html 
      PersistentVolumeClaim:
        claimName: myapp-pvc
