readiness-httpGet-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readiness-httpget-container
  namespace: default
spec:
  containers:
    - name: readiness-httpget-container
      image: ikubernetes/myapp:v1
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 80
      readineesProbe:
        httpGet:
          port: http
          path: /index.html
        initialDelaySeconds: 1
        periodSecond: 3
