svc-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  selector:
    app: redis
    role: logstore
#  clusterIP: 
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379


# kubectl patch svc myapp -p '{"spec":{"sessionAffinity":"ClientIP"}}'
