tomcat-ingress-tls-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tomcat-tls
  namespace:  default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts: 
      - tomcat.test.com
      secretName: ingress-tomcat    
  rules:
    - host: tomcat.test.com
      http:
        paths:
          - path:
            backend:
              serviceName:  tomcat
              servicePort:  8080
